Finished work with Telnet Server